--- a/src/components/FileContainer/widgets/FileList.scss
+++ b/src/components/FileContainer/widgets/FileList.scss
@@ -85,6 +85,7 @@
     background-color: rgb(162, 162, 162);
     opacity:0.3;
     border:1px dashed #d9d9d9;
+    z-index: 11116;
 }
 .active {
     background: #eee;
